<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:cropToPadding="true"
        android:adjustViewBounds="true"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="centerCrop"
    />

    <TextView
        android:id="@+id/item_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_margin"
        android:paddingBottom="@dimen/text_margin"
        android:width="@dimen/name_width"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/content"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:paddingTop="@dimen/text_margin"
        android:paddingBottom="@dimen/text_margin"
        android:width="@dimen/description_width"
        android:textAppearance="?attr/textAppearanceListItem" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <ImageButton
        android:id="@+id/sound_image"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:minWidth="@dimen/button_width"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="centerCrop"
        />
</LinearLayout>
