<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/full_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cropToPadding="true"
        android:adjustViewBounds="true"
        android:maxWidth="400dp"
        android:maxHeight="400dp"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        />

</RelativeLayout>